--- a/src/Assets/Style/malaria.css
+++ b/src/Assets/Style/malaria.css
@@ -2,7 +2,7 @@
 .strucbtn{
     float: left;
     width: 30%;
-    margin-left: 25git5px;
+    margin-left: 255px;
     height: 100px;
 }
 .selection{
